--- a/styles.css
+++ b/styles.css
@@ -3,9 +3,10 @@ div{
 }
 button{
     margin-right: 10px;
+    width: 20%;
+    height: 40px;
+    border-radius: 8px;
 }
-
-
 @media (min-width:320px)  {
     body{
         background-color: red;
